add algorand parse
